src/styles.css
body, html {
    margin: 0;
    padding: 0;
    background-color: #fff;
  }
  
  .cursor {
    display: inline-block;
    width: 1px;
    height: 22px;
    background-color: #000;
    animation: breathe 5s infinite ease-in-out;
    margin-left: 4px;
  }
  
  @keyframes breathe {
    0%, 100% { opacity: 0.2; }
    50% { opacity: 1; }
  }

